JDK-8242107 : Shenandoah: Fix aarch64 build after JDK-8242082
Type:Bug
Component:hotspot
Sub-Component:gc
Affected Version:15
Priority:P3
Status:Resolved
Resolution:Fixed
OS:generic
CPU:generic
Submitted:2020-04-03
Updated:2022-02-24
Resolved:2020-04-03
The Version table provides details related to the release that this issue/RFE will be addressed.
Unresolved : Release in which this issue/RFE will be addressed. Resolved: Release in which this issue/RFE has been resolved. Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.
I forgot to remove one traversal reference in aarch64 asm code in JDK-8242082.
Comments
Fix Request (14u)
Followup for JDK-8242082 backport. Patch applies cleanly to 14u, passes hotspot_gc_shenandoah, tier{1,2,3} with Shenandoah enabled. The patch is fully contained in Shenandoah code.