8242107: Shenandoah: Fix aarch64 build after JDK-8242082

Reviewed-by: shade